--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+app:
+  jwt:
+    secret: TestJwtKeyForHMACSHA256_1234567890abcdefghij
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/librarydb  # Correct URL and port
@@ -10,4 +18,4 @@ spring:
     show-sql: true                              # Show SQL queries in logs
     database-platform: org.hibernate.dialect.MySQLDialect  # MySQL dialect
 server:
-  port: 8081
+  port: 8082
